documentor: added application icon.

--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -72,7 +72,8 @@ SOURCES = \
 	src/SettingsDialog.ec
 
 RESOURCES = \
-	locale/zh_CN/LC_MESSAGES/documentor.mo
+	locale/zh_CN/LC_MESSAGES/documentor.mo \
+	res/documentorIcon.png
 
 # CROSS-PLATFORM MAGIC
 
@@ -126,6 +127,7 @@ $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
 	$(STRIP) $(STRIPOPT) $(TARGET)
+	$(EAR) awq $(TARGET) res/documentorIcon.png ""
 	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/documentor.mo "locale/zh_CN/LC_MESSAGES"
 	$(call cpq,$(TARGET),../obj/$(PLATFORM)/bin/)
 
